@@ -5,39 +5,39 @@ sysdeps:  sd_direntry sd_endian sd_x86cpuid sd_floats sd_integers sd_systype sd_
 sysdeps_clean:  sd_direntry_clean sd_endian_clean sd_x86cpuid_clean sd_floats_clean sd_integers_clean sd_systype_clean sd_signal_clean
 
 sd_direntry:
-	(cd direntry && make)
+	@(cd direntry && make)
 sd_direntry_clean:
-	(cd direntry && make clean)
+	@(cd direntry && make clean)
 
 sd_endian:
-	(cd endian && make)
+	@(cd endian && make)
 sd_endian_clean:
-	(cd endian && make clean)
+	@(cd endian && make clean)
 
 sd_x86cpuid:
-	(cd x86cpuid && make)
+	@(cd x86cpuid && make)
 sd_x86cpuid_clean:
-	(cd x86cpuid && make clean)
+	@(cd x86cpuid && make clean)
 
 sd_floats:
-	(cd floats && make)
+	@(cd floats && make)
 sd_floats_clean:
-	(cd floats && make clean)
+	@(cd floats && make clean)
 
 sd_integers:
-	(cd integers && make)
+	@(cd integers && make)
 sd_integers_clean:
-	(cd integers && make clean)
+	@(cd integers && make clean)
 
 sd_systype:
-	(cd systype && make)
+	@(cd systype && make)
 sd_systype_clean:
-	(cd systype && make clean)
+	@(cd systype && make clean)
 
 sd_signal:
-	(cd signal && make)
+	@(cd signal && make)
 sd_signal_clean:
-	(cd signal && make clean)
+	@(cd signal && make clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
