@@ -10,12 +10,14 @@ temp64="float64.h"
 tempsys="sysdep_line.out"
 
 floats:
-	./make-floats ${temp32} ${temp64} ${tempsys}
-	cp ${temp32} ${float32_header}
-	cp ${temp64} ${float64_header}
-	cat ${tempsys} >> ${sd_out}
+	@echo SYSDEPS floats run create ${temp32} ${temp32}
+	@./make-floats ${temp32} ${temp64} ${tempsys}
+	@cp ${temp32} ${float32_header}
+	@cp ${temp64} ${float64_header}
+	@cat ${tempsys} >> ${sd_out}
 
 floats_clean:
-	rm -f ${float32_header} ${float64_header} float32_make float64_make
-	rm -f ${temp32} ${temp64} ${tempsys}
+	@echo SYSDEPS floats clean
+	@rm -f ${float32_header} ${float64_header} float32_make float64_make
+	@rm -f ${temp32} ${temp64} ${tempsys}
 	
