@@ -18,20 +18,23 @@ tempu64="_uint64.h"
 tempsys="sysdep_line.out"
 
 integers:
-	./make-integers ${tempi16} ${tempi32} ${tempi64} ${tempu16} \
+	@echo SYSDEPS integers run create ${tempi16} ${tempi32} ${tempi64} \
+	${tempu16} ${tempu32} ${tempu64} ${tempsys}
+	@./make-integers ${tempi16} ${tempi32} ${tempi64} ${tempu16} \
   ${tempu32} ${tempu64} ${tempsys}
-	cp ${tempi16} ${int16_h}
-	cp ${tempi32} ${int32_h}
-	cp ${tempi64} ${int64_h}
-	cp ${tempu16} ${uint16_h}
-	cp ${tempu32} ${uint32_h}
-	cp ${tempu64} ${uint64_h}
-	cat ${tempsys} >> ${sd_out}
+	@cp ${tempi16} ${int16_h}
+	@cp ${tempi32} ${int32_h}
+	@cp ${tempi64} ${int64_h}
+	@cp ${tempu16} ${uint16_h}
+	@cp ${tempu32} ${uint32_h}
+	@cp ${tempu64} ${uint64_h}
+	@cat ${tempsys} >> ${sd_out}
 
 integers_clean:
-	rm -f ${int16_h} ${int32_h} ${int64_h}
-	rm -f int16_make int32_make int64_make
-	rm -f ${uint16_h} ${uint32_h} ${uint64_h}
-	rm -f uint16_make uint32_make uint64_make
-	rm -f ${tempi16} ${tempi32} ${tempi64} ${tempu16} ${tempu32} ${tempu64}
-	rm -f ${tempsys}
+	@echo SYSDEPS integers clean
+	@rm -f ${int16_h} ${int32_h} ${int64_h}
+	@rm -f int16_make int32_make int64_make
+	@rm -f ${uint16_h} ${uint32_h} ${uint64_h}
+	@rm -f uint16_make uint32_make uint64_make
+	@rm -f ${tempi16} ${tempi32} ${tempi64} ${tempu16} ${tempu32} ${tempu64}
+	@rm -f ${tempsys}
