@@ -1,12 +1,11 @@
 #!/bin/sh
 
-fatal()
+error()
 {
-  echo "fatal: $1" 1>&2
-  exit 111
+  echo "error: $1" 1>&2
 }
 
-search_for()
+search_header()
 {
   header="$1"
   path="$2"
@@ -16,7 +15,26 @@ search_for()
   do
     if [ -f "${d}/${header}" ]
     then
-      echo " -I${d} "
+      echo "-I${d} ${args}"
+      return 0
+    fi
+  done
+
+  # could not locate header
+  return 1
+}
+
+search_lib()
+{
+  lib="$1"
+  path="$2"
+  args="$3"
+
+  for d in ${path}
+  do
+    if [ -f "${d}/${lib}" ]
+    then
+      echo "-L${d} ${args}"
       return 0
     fi
   done
