@@ -6,8 +6,10 @@ clean: x86cpuid_clean
 tempsys="sysdeps_line.out"
 
 x86cpuid:
-	./x86cpuid.sh ${tempsys}
-	./cat.sh ${tempsys} ${sd_out}
+	@echo SYSDEPS x86cpuid run
+	@./x86cpuid.sh ${tempsys}
+	@./cat.sh ${tempsys} ${sd_out}
 
 x86cpuid_clean:
-	rm -f x86cpuid ${tempsys}
+	@echo SYSDEPS x86cpuid clean
+	@rm -f x86cpuid ${tempsys}
